tests/algorithms/x/Java/linear_algebra/lu_decomposition.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden484_lu_decomposition2427940095/001/Main.java:82: error: incompatible types: double[] cannot be converted to Object[]
                line = line + _p(_geto(mat[i_1], j_1));
                                          ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
